syntax = "proto3";

package radish.weather.v1;

enum Condition {
  UNSPECIFIED = 0;
  SUNNY = 1;
  RAINY = 2;
}

message GetWeatherRequest {
  float latitude = 1;
  float longitude = 2;
}

message GetWeatherResponse {
  float temperature = 1;
  Condition conditions = 2;
}

service WeatherService {
  rpc GetWeather(GetWeatherRequest) returns (GetWeatherResponse);
}
